added support for tags

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,3 +20,13 @@
 .autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
 .autocomplete-group { padding: 2px 5px; }
 .autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+
+.tag-item{
+  background-color:orange;
+  border:1px solid yellow;
+  color:#000;
+}
+
+.tag-item:hover{
+  color:#000;
+}
